fix item data